# egg3

./: README.md
egg3/: Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac
egg3/CVS/: Entries  Repository
egg3/PM/CVS/: Repository
egg3/conf/: cluster-eggd.cfg  egg.cfg  egg.cfg.in  eggServiceClientLocal.cfg  eggServiceClientTcp.cfg  eggd.cfg  rws-eggd-ctl.cfg  rws-eggd.cfg
egg3/conf/CVS/: Entries  Repository
egg3/doc/: Doxyfile
egg3/doc/CVS/: Entries  Repository
egg3/doc/DocBook/: README  m.xml  m_ch01.xml  m_ch02.xml  m_ch03.xml  m_ch04.xml  m_ch05.xml  m_ch06.xml  m_ch07.xml  my.css  online.odt
egg3/doc/DocBook/CVS/: Entries  Repository
egg3/doc/DocBook/sample/: eggadd.c  eggadditer.c  eggaddrange1.c  eggcluster.c  eggdelete1.c  eggdictadd.c  eggdictadd2.c  eggdictsearch.c  eggdictsearch2.c  eggdictwords.c  eggmodify.c  eggorderby.c  eggrws.c  eggsocket.c  (+5 more)
egg3/doc/devl/: Egg0.3-main.h  egg2-install.h  eggUs.doc
egg3/doc/mom/: RD-egg2-MOM-20111226.odt  RD-egg2-MOM-20120109.odt  RD-egg2-MOM-20120116.odt  RD-egg2-MOM-20120130.odt  RD-egg2-mom-20110307  RD-egg2-mom-20110315  RD-egg2-mom-20110621.odt  RD-egg2-mom-20110713.odt  RD-egg2-mom-20110725.odt  RD-egg2-mom-20110801.odt  RD-egg2-mom-20110819.odt  RD-egg2-mom-20110913.odt  RD-egg2-mom-20120312.odt  RD-egg2-mom-20120319.odt
egg3/doc/reqm/: egg2.2.1_reqm.h  egg2_reqm.h
egg3/doc/tutorial/: egg2-api-0-8.h  egg2.0.5_tutorial.h  egg2.0.8_tutorial.h  egg2.0.9_tutorial.h  egg2.1.1_tutorial.h  egg2_rws_tutorial.h  egg2_tutorial.h
egg3/doc/website/: RD-egg2-website-SRS.h
egg3/redhat/: egg.spec  eggd.init  gen_rpm.sh  rws-eggd.init
egg3/redhat/CVS/: Entries  Repository
egg3/server/: Makefile.am  Makefile.in  build.sh  eggInfoServer.c  eggMemServer.c  eggServer.c  eggServiceServer.c  eggServiceServerConfig.c  eggServiceServerConfig.h
egg3/server/CVS/: Entries  Repository
egg3/server/RWS/: Makefile.am  Makefile.in  eggRWSBakerCfg.c  eggRWSBakerCfg.h  eggRWSBakerManager.c  eggRWSBakerManager.h  eggRWSCommon.c  eggRWSCommon.h  eggRWSExportDoc.c  eggRWSIntServer.c  eggRWSIntServer.cfg  eggRWSIntServer.h  eggRWSLog.c  eggRWSLog.h  eggRWSMemDptor.c  eggRWSMemDptor.h  eggRWSMemManager.c  eggRWSMemManager.h  eggRWSMergePackage.c  eggRWSMergePackage.h  eggRWSPackBuf.c  eggRWSPackBuf.h  eggRWSPackageSaver.c  rws-conf-deploy.pl  rws-eggd-ctl  rws-eggd-dump-egg  rws-eggd-multi  rws-eggd-store-egg
egg3/src/: Egg3.h  EggDef.h  EggError.h  Makefile.am  Makefile.in  egg3.pc.in  eggAnalyzer.h  eggCluster.h  eggDebug.h  eggDid.h  eggDirectory.h  eggDocument.h  eggField.h  eggFieldKey.h  eggHandle.h  eggHttp.h  eggIndexCache.h  eggIndexReader.h  eggIndexSearcher.h  eggIndexWriter.h  eggPath.h  eggQuery.h  eggScoreDoc.h  eggSearchIter.h  eggServiceClient.h  eggSySRecorder.h  eggTopCollector.h
egg3/src/CVS/: Entries  Repository
egg3/src/analysis/: eggAnalyzer.c
egg3/src/cluster/: eggClusterCommon.c  eggClusterCommon.h
egg3/src/common/: eggLibLoad.c  eggLibLoad.h  eggSySRecorder.c
egg3/src/conf/: compile.sh  eggCfg.bison  eggCfg.bison.c  eggCfg.bison.h  eggCfg.flex  eggCfg.flex.c  eggConfig.c  eggConfig.h
egg3/src/egglib/: eggAllocFree.c  eggAllocFree.h  emacros.h  emalloc.c  emalloc.h  emem.c  emem.h  etype.h
egg3/src/index/: eggDocView.c  eggDocView.h  eggFieldView.c  eggFieldView.h  eggFieldWeight.c  eggFieldWeight.h  eggIdNode.c  eggIdView.c  eggIdView.h  eggIndexCache.c  eggIndexNodeView.c  eggIndexNodeView.h  eggIndexRecord.c  eggIndexRecord.h  eggIndexView.c  eggIndexView.h  eggListView.c  eggListView.h
egg3/src/interface/: eggCluster.c  eggDirectory.c  eggDocument.c  eggField.c  eggHttp.c  eggIndexReader.c  eggIndexReaderCluster.c  eggIndexReaderCluster.h  eggIndexReaderLocal.c  eggIndexReaderLocal.h  eggIndexReaderRemote.c  eggIndexReaderRemote.h  eggIndexReaderServiceClient.c  eggIndexReaderServiceClient.h  eggIndexSearcher.c  eggIndexSearcherCluster.c  eggIndexSearcherCluster.h  eggIndexSearcherLocal.c  eggIndexSearcherLocal.h  eggIndexSearcherRemote.c  eggIndexSearcherRemote.h  eggIndexSearcherServiceClient.c  eggIndexSearcherServiceClient.h  eggIndexWriter.c  eggIndexWriterCluster.c  eggIndexWriterCluster.h  eggIndexWriterLocal.c  eggIndexWriterLocal.h  eggIndexWriterRemote.c  eggIndexWriterRemote.h  eggIndexWriterServiceClient.c  eggIndexWriterServiceClient.h  eggPath.c  eggServiceClient.c  eggServiceClientConfig.c  eggServiceClientConfig.h
egg3/src/log/: eggPrtLog.c  eggPrtLog.h
egg3/src/net/: eggClientInfoServ.c  eggClientInfoServ.h  eggNetHttp.c  eggNetHttp.h  eggNetIndexList.c  eggNetIndexList.h  eggNetPackage.c  eggNetPackage.h  eggNetServer.c  eggNetServer.h  eggNetServiceClient.c  eggNetServiceClient.h  eggNetSocket.c  eggNetSocket.h  eggNetType.h  eggSpanUnit.c  eggSpanUnit.h
egg3/src/search/: eggFieldKey.c  eggQuery.c  eggScoreDoc.c  eggSearchIter.c  eggTopCollector.c
egg3/src/similarity/: eggSimilarScore.c  eggSimilarScore.h
egg3/src/storage/: Cluster.c  Cluster.h  File.c  File.h  FileLock.c  FileLock.h  ViewStream.c  ViewStream.h  eggConfig.c  eggConfig.h  eggDocNode.h  eggFieldNode.h  eggIdNode.c  eggIdNode.h  eggIdTable.c  eggIdTable.h  eggRecoveryLog.c  eggRecoveryLog.h
egg3/src/uti/: Utility.c  Utility.h  VariantInteger.c  VariantInteger.h  eggReg.c  eggReg.h  eggThreadPool.c  eggThreadPool.h  eggUtiMd5.c  eggUtiMd5.h
egg3/utest/: Makefile.am  Makefile.in  add.sh  complie.sh  eggBTreeTest.cpp  eggBTreeTest.h  eggConfigTest.cpp  eggConfigTest.h  eggFileTest.cpp  eggFileTest.h  eggHttpTest.cpp  eggHttpTest.h  eggIdTableTest.cpp  eggIdTableTest.h  eggIdViewTest.cpp  eggIdViewTest.h  eggItfTest.cpp  eggItfTest.h  eggListTest.cpp  eggListTest.h  eggPathTest.cpp  eggPathTest.h  eggRecoveryLogTest.cpp  eggRecoveryLogTest.h  eggThreadPoolTest.cpp  eggThreadPoolTest.h  eggTopTest.cpp  eggTopTest.h  eggUtest.cpp  eggViewStreamTest.cpp  eggViewStreamTest.h  eggWeightTest.cpp  eggWeightTest.h  eggadd.c  eggdictdoc.c  eggsearch.c  search.sh  test.sh  test_eggFieldModify.c  test_eggFieldModify.sh  (+7 more)
egg3/utest/CVS/: Entries  Repository
egg3/utest/test/: test.c
(+72 files in other folders)
